--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
+        <link rel="icon" href="{{ asset('images/jinx.png') }}">
         {% block stylesheets %}
         {% endblock %}
 
@@ -12,6 +12,15 @@
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+    <div  class="image-container"><img classe="imgCentre" src="{{ asset('images/jinx.png') }}" class="arrondi" alt="logo Eniflix"></div>
+    <nav  class="styled-nav">
+        <ul>
+            <li><a href="{{ path('home') }}">Home</a></li>
+            <li><a href="">Catalogue</a></li>
+            <li><a href="{{ path('list') }}">Liste des films</a></li>
+        </ul>
+    </nav>
+
+    {% block body %}{% endblock %}
     </body>
 </html>
