--- a/templates/serie/list.html.twig
+++ b/templates/serie/list.html.twig
@@ -10,6 +10,7 @@
         <tr>
             <th>Id</th>
             <th>Nom</th>
+            <th>Genre</th>
             <th>status</th>
             <th>Vote</th>
             <th>Popularity</th>
@@ -21,6 +22,7 @@
         <tr>
             <td>{{ serie.id }}</td>
             <td>{{ serie.name }}</td>
+            <td>{{ serie.genre }}</td>
             <td>{{ serie.status }}</td>
             <td>{{ serie.vote }}</td>
             <td>{{ serie.popularity }}</td>
