--- a/templates/serie/list.html.twig
+++ b/templates/serie/list.html.twig
@@ -6,6 +6,14 @@
 
     <h1 class="styled-nav"> Liste </h1>
 
+
+    {% if page > 1 %}
+        <a class="styled-nav" href="{{ path('list',{'page':page-1}) }}">page précédente</a>
+    {% endif %}
+    {% if page < totPage %}
+        <a class="styled-nav" href="{{ path('list',{'page':page+1}) }}">page suivante</a>
+    {% endif %}
+
     <table class="styled-table">
         <tr>
             <th>Id</th>
