--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,6 +21,16 @@
         </ul>
     </nav>
 
+    {% for type, messages in app.flashes %}
+
+        {% for message in messages %}
+
+            <div class="alert alert-{{ type }}">
+                {{ message }}
+            </div>
+        {% endfor %}
+    {% endfor %}
+
     {% block body %}{% endblock %}
     </body>
 </html>
