--- a/templates/serie/list.html.twig
+++ b/templates/serie/list.html.twig
@@ -50,6 +50,9 @@
             <h3>{{ serie.name }}</h3>
                 <a href="{{ path('_details',{'id' :serie.id}) }}">
                     <img src="{{ asset('uploads/posters/series/' ~ serie.poster) }}" width="250px" alt="Poster de {{ serie.name }}" loading="lazy">
+                    {% for season in serie.seasons %}
+                        {{ season.number }}
+                    {% endfor %}
                 </a>
             </div>
         {% endfor %}
